# CodeShine_2025

./: .gitignore  audio_2_text.py  endpoints.py  generate_structured_output.py  logger.py  main.py  pyproject.toml  test_endpoint.py  translate_and_classify.py
static/: swagger.yaml
